@@ -220,6 +220,7 @@ move.destination=Nouveau nom de sujet
 move.editcomment={0} d\u00E9plac\u00E9 vers {1}
 move.exception.destinationexists=Le sujet {0} existe d\u00E9j\u00E0.
 move.exception.nodestination=Aucun sujet destination sp\u00E9cifi\u00E9.
+move.exception.permission=The topic {0} has been protected and cannot be moved by users without appropriate permissions.
 move.overview=Cette page fournit des fonctions pour renommer un sujet (incluant son historique).  L'ancien nom de sujet sera alors automatiquement redirig\u00E9 vers le nouveau nom de sujet.  A noter que la page <b>ne peut</b> \u00EAtre d\u00E9plac\u00E9e s'il existe d\u00E9j\u00E0 un sujet portant ce nouveau nom.
 move.title=Du00e9placement {0}
 recentchanges.caption.comments=Commentaires
