@@ -220,6 +220,7 @@ move.destination=A sz\u00F3cikk \u00FAj neve
 move.editcomment={0} \u00E1thelyezve ide\: {1}
 move.exception.destinationexists={0} sz\u00F3cikk m\u00E1r l\u00E9tezik.
 move.exception.nodestination=Nincs c\u00E9l megadva.
+move.exception.permission=The topic {0} has been protected and cannot be moved by users without appropriate permissions.
 move.overview=Ez az oldal lehet\u0151v\u00E9 teszi egy sz\u00F3cikk \u00E1tmozgat\u00E1s\u00E1t (a lapt\u00F6rt\u00E9net\u00E9vel egy\u00FCtt) egy \u00FAj n\u00E9vre.  A r\u00E9gi sz\u00F3cikk ezut\u00E1n automatikusan \u00E1t fog ir\u00E1ny\u00EDtani az \u00FAj n\u00E9vre.  Egy sz\u00F3cikket <b>nem</b> lehet \u00E1tmozgatni, ha m\u00E1r van egy sz\u00F3cikk az \u00FAj n\u00E9ven\!
 move.title={0} \u00E1tmozgat\u00E1sa
 recentchanges.caption.comments=vita
