@@ -220,6 +220,7 @@ move.destination=Nazwa nowego artyku\u0142u
 move.editcomment={0} przeniesione do {1}
 move.exception.destinationexists=Temat {0} ju\u017C istnieje.
 move.exception.nodestination=Nie okre\u015Blono nazwy docelowej.
+move.exception.permission=The topic {0} has been protected and cannot be moved by users without appropriate permissions.
 move.overview=Strona umo\u017Cliwia przeniesienie zawarto\u015Bci (oraz historii) pod now\u0105 nazw\u0119.  Odczyt starej nazwy b\u0119dzie automatycznie przekierowywany do nowej strony. 
 move.title=Przeniesienie {0}
 recentchanges.caption.comments=komentarze
