@@ -220,6 +220,7 @@ move.destination=\u65B0\u4E3B\u9898\u540D\u79F0
 move.editcomment={0}\u79FB\u52A8\u5230{1}
 move.exception.destinationexists=\u4E3B\u9898{0}\u5DF2\u7ECF\u4E0D\u5B58\u5728\u4E86\u3002
 move.exception.nodestination=\u6CA1\u6709\u6307\u5B9A\u65B0\u7684\u4E3B\u9898\u540D\u79F0
+move.exception.permission=The topic {0} has been protected and cannot be moved by users without appropriate permissions.
 move.overview=\u8FD9\u4E2A\u9875\u9762\u63D0\u4F9B\u4FEE\u6539\u4E3B\u9898\u540D\u79F0\uFF08\u5305\u62EC\u5B83\u7684\u5386\u53F2\uFF09\u7684\u529F\u80FD\u3002\u65E7\u7684\u4E3B\u9898\u540D\u5C06\u81EA\u52A8\u91CD\u5B9A\u5411\u5230\u65B0\u7684\u4E3B\u9898\u540D\u4E0A\uFF0C\u6CE8\u610F\uFF0C\u4E3B\u9898<b>\u4E0D\u80FD</b>\u79FB\u52A8\u5230\u5DF2\u7ECF\u5B58\u5728\u7684\u4E3B\u9898\u4E0A\u3002
 move.title=\u79FB\u52A8{0}
 recentchanges.caption.comments=\u8BC4\u8BBA
