@@ -220,6 +220,7 @@ move.destination=\u65B0\u4E3B\u984C\u540D\u7A31
 move.editcomment={0} \u79FB\u52D5\u5230 {1}
 move.exception.destinationexists=\u4E3B\u984C {0} \u5DF2\u7D93\u4E0D\u5B58\u5728\u4E86\u3002
 move.exception.nodestination=\u6C92\u6709\u6307\u5B9A\u65B0\u7684\u4E3B\u984C\u540D\u7A31
+move.exception.permission=The topic {0} has been protected and cannot be moved by users without appropriate permissions.
 move.overview=\u9019\u500B\u9801\u9762\u63D0\u4F9B\u4FEE\u6539\u4E3B\u984C\u540D\u7A31\uFF08\u5305\u62EC\u5B83\u7684\u6B77\u53F2\uFF09\u7684\u529F\u80FD\u3002  \u820A\u7684\u4E3B\u984C\u540D\u5C07\u81EA\u52D5\u91CD\u5B9A\u5411\u5230\u65B0\u7684\u4E3B\u984C\u540D\u4E0A\uFF0C  \u6CE8\u610F\uFF0C\u4E3B\u984C<b>\u4E0D\u80FD</b>\u79FB\u52D5\u5230\u5DF2\u7D93\u5B58\u5728\u7684\u4E3B\u984C\u4E0A\u3002
 move.title=\u79FB\u52D5 {0}
 recentchanges.caption.comments=\u8A55\u8AD6
